# rulescope

./: .gitignore  .rulescope.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: validate_pr_gate_local.sh
.github/workflows/: ci.yml  pr-gate.yml
datasets/medium_realistic/: bitsadmin_transfer_job.yml  broken_rule.yml  certreq_fetch_remote.yml  certutil_download.yml  generic_archive_staging.yml  generic_encoded_interpreter.yml  generic_remote_admin_tools.yml  mshta_remote_payload.yml  net_group_domain_admins.yml  nltest_domain_trust_enum.yml  powershell_base64_long.yml  powershell_download_cradle.yml  powershell_from_office.yml  powershell_nop_hidden.yml  powershell_recon.yml  process_injection_generic.yml  process_injection_generic_dup.yml  psexec_service_install.yml  regsvr32_sct_download.yml  rundll32_javascript.yml  sc_remote_service_create.yml  schtasks_remote_exec.yml  suspicious_powershell_duplicate.yml  vssadmin_shadow_delete.yml  weak_wmi_exec.yml  wevtutil_log_clear.yml  wmic_remote_process_create.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  GITHUB_ACTIONS_PR_GATE.md  I18N.md  SCORING.md  SEMANTIC_DIFF.md  USE_CASES.md
docs/demo_outputs/: compare.txt  explain.txt  pr_gate_compare.md  pr_gate_local_test.txt  report.html  report_cmd.txt  scan.txt
docs/fr/: README.md
examples/correlation/: brute_force.yml  weak_correlation.yml
examples/rules/: certutil_flags.yml  noisy_generic_process.yml  orphan_rundll32.yml
rulescope/: __init__.py  benchmark.py  cli.py  comparison.py  engine.py  explain.py  i18n.py  semantic_diff.py  watcher.py
rulescope/analyzers/: __init__.py  attack_quality.py  base.py  coverage.py  documentation.py  duplicates.py  maintainability.py  (+5 more)
tests/: conftest.py  test_analyzers.py  test_benchmark.py  test_catalog_health_score.py  test_cli.py  test_cli_console_and_helpers.py  test_cli_contract.py  test_core.py  test_correlation.py  test_coverage_final.py  test_coverage_push.py  test_e2e_and_i18n.py  test_explain_and_utils.py  test_parser.py  test_plugins_and_exports.py  test_semantic_contract.py  test_semantic_diff_details.py  test_watch.py
(+27 files in other folders)
